@@ -610,11 +610,7 @@ s16_t tcp_pcbs_sane(void);
 #  define tcp_pcbs_sane() 1
 #endif /* TCP_DEBUG */
 
-#if NO_SYS
-#define tcp_timer_needed()
-#else
 void tcp_timer_needed(void);
-#endif
 
 /* The TCP PCB lists. */
 union tcp_listen_pcbs_t { /* List of all TCP PCBs in LISTEN state. */
